--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="ke">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>투표참여 안내</title>
   </head>
   <body>
-    <div>
-      <img src="../image/goods_notice.png" />
+    <div className="body-wrap container-fluid col-12">
+      <div className="content-body col-8">
+        <img src="../image/goods_notice.png" />
+      </div>
     </div>
   </body>
 </html>
